--- a/index.html
+++ b/index.html
@@ -19,30 +19,8 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="open-source-library-request-manager" class="anchor" href="#open-source-library-request-manager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Open-source library request manager</h1>
-
-<blockquote>
-<h4>
-<a id="a-place-to-share-ideas-for-open-source-library-with-other-developers" class="anchor" href="#a-place-to-share-ideas-for-open-source-library-with-other-developers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A place to share ideas for open source library with other developers.</h4>
-</blockquote>
-
-<ul>
-<li>If you have an idea for a new library but don't have the time or skills to develop it, simply <a href="https://github.com/HeinrichReimer/open-source-library-request-manager/issues/new">create a new issue</a>.</li>
-<li>If you're searching for ideas to implement a new library just search the <a href="https://github.com/HeinrichReimer/open-source-library-request-manager/issues">open issues</a>.</li>
-</ul>
-
-<h2>
-<a id="rules" class="anchor" href="#rules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rules</h2>
-
-<ol>
-<li>Requests <strong>must</strong> contain a clear and descriptive <em>title</em>.</li>
-<li>Requests <strong>must</strong> contain a clear <em>description</em>. Screenshots/links/mockups/API-specs are <em>optional</em> but recommended.</li>
-<li>Requests <strong>must</strong> define at least one related <em>programming language</em> or <em>framework</em> in their description. The request will be tagged according to this information. (If a tag for a specific language is missing just comment on <a href="https://github.com/HeinrichReimer/open-source-library-request-manager/issues/1"><em>this issue</em></a> and I'll add the tag.)</li>
-<li>Requests that have made it to an actual library will be <em>closed</em> to make it easier for other devs to find ideas that aren't already "taken".</li>
-<li>
-<em>Invalid</em> requests will be marked <code>invalid</code> until they are fixed.</li>
-</ol>
+      
+      {% include README.md %}
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/HeinrichReimer/open-source-library-request-manager">Open-source library request manager</a> is maintained by <a href="https://github.com/HeinrichReimer">HeinrichReimer</a>.</span>
