--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       
-      {% include README.md %}
+      {% markdown README.md %}
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/HeinrichReimer/open-source-library-request-manager">Open-source library request manager</a> is maintained by <a href="https://github.com/HeinrichReimer">HeinrichReimer</a>.</span>
