--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+---
+title: Open-source library request manager
+---
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Open-source library request manager by HeinrichReimer</title>
+    <title>Open-source library request manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
