--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 title: Open-source library request manager
 ---
 <section>
-  {% capture my-include %}{% include_relative test.md %}{% endcapture %}
+  {% capture my-include %}{% include_relative README.md %}{% endcapture %}
   {{ my-include | markdownify }}
 </section>
